<resources>
    <string name="app_name">Öğreniyorum</string>
    <string name="action_settings">Ayarlar</string>
    <string name="action_sign_in_short">KAyıt Ol</string>
    <string name="email">Email</string>
    <string name="minimum_password">Şifre çok kısa en az 6 karakter giriniz!</string>
    <string name="auth_failed">Giriş yapılamadı, kullanıcı adınızı ve parolanızı kontrol edin ya da kayıt olun.</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Giriş Yapın</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Şifre</string>
    <string name="hint_name">İsim</string>
    <string name="btn_login">Giriş Yap</string>
    <string name="btn_link_to_register">Üye değil misiniz? Öğreniyorum\'a hemen katılın!</string>
    <string name="btn_link_to_login">Zaten kayıtlıyım, Giriş yap</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
   <string name="content_desc">image</string>
    <string name="ogr_listesine_ekle">Öğrenme listesine ekle</string>
    <string name="tur">Tür</string>
    <string name="not">Not:</string>
    <string name="kaydet">KAYDET</string>
    <string name="tutar">Fiyat:</string>
    <string name="k_yap">Çıkış Yap</string>
</resources>
